--- a/packages/frappe-components/package.json
+++ b/packages/frappe-components/package.json
@@ -12,8 +12,9 @@
       "require": "./dist/index.js"
     }
   },
-   "dependencies": {
+  "dependencies": {
+    "@frappe-components/design-system": "^0.0.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
-   }
+  }
 }
