Update Storybook configuration and package exports for consistency

--- a/packages/frappe-components/package.json
+++ b/packages/frappe-components/package.json
@@ -8,8 +8,8 @@
   "sideEffects": false,
   "exports": {
     ".": {
-      "import": "./dist/index.js",
-      "require": "./dist/index.js"
+      "import": "./src/index.js",
+      "require": "./src/index.js"
     }
   },
   "dependencies": {
