Add tsconfig.json for frappe-components and update reference path in root tsconfig

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,6 @@
   "references": [
     { "path": "./tsconfig.app.json" },
     { "path": "./tsconfig.node.json" },
-    { "path": "packages/frappe-components/tsconfig.json" }
+    { "path": "./packages/frappe-components/tsconfig.json" }
   ]
 }
