--- a/packages/frappe-components/package.json
+++ b/packages/frappe-components/package.json
@@ -14,9 +14,17 @@
     "./theme.css": "./src/theme.css"
   },
   "dependencies": {
-    "@frappe-components/design-system": "^0.0.0",
+    "@floating-ui/react": "^0.27.13",
+    "@headlessui/react": "^2.2.6",
     "@popperjs/core": "^2.11.8",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@tailwindcss/vite": "^4.1.11",
+    "@tiptap/react": "^3.0.7",
+    "echarts": "^5.6.0",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-grid-layout": "^1.5.2",
+    "react-router": "^7.7.1",
+    "tailwindcss": "^4.1.11"
   }
 }
