--- a/packages/frappe-components/package.json
+++ b/packages/frappe-components/package.json
@@ -20,6 +20,7 @@
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-tooltip": "^1.2.7",
     "@tailwindcss/vite": "^4.1.11",
+    "dayjs": "^1.11.13",
     "echarts": "^5.6.0",
     "feather-icons": "^4.29.2",
     "lucide-react": "^0.539.0",
