--- a/packages/frappe-components/package.json
+++ b/packages/frappe-components/package.json
@@ -36,6 +36,7 @@
   },
   "devDependencies": {
     "@types/feather-icons": "^4.29.4",
-    "@types/node": "^24.1.0"
+    "@types/node": "^24.1.0",
+    "@types/react-grid-layout": "^1.3.5"
   }
 }
