--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "frappe-ui-react",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0-beta.0",
   "type": "module",
   "workspaces": [
     "packages/*"
