--- a/packages/frappe-ui-react/package.json
+++ b/packages/frappe-ui-react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@rtcamp/frappe-ui-react",
-  "version": "0.0.0",
+  "version": "1.0.0-beta.0",
   "main": "dist/index.js",
   "module": "dist/index.js",
   "types": "dist/index.d.ts",
