Fix build config.

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -28,7 +28,7 @@
     "noUncheckedSideEffectImports": true,
     "baseUrl": ".",
     "paths": {
-      "@frappe-ui-react/*": ["packages/frappe-ui-react/src/*"]
+      "@rtcamp/*": ["packages/frappe-ui-react/src/*"]
     }
   },
   "exclude": ["packages/*/node_modules/**"]
