--- a/packages/frappe-ui-react/package.json
+++ b/packages/frappe-ui-react/package.json
@@ -13,6 +13,11 @@
     },
     "./theme.css": "./src/theme.css"
   },
+  "scripts": {
+    "prepare": "husky install",
+    "dev": "vite",
+    "build": "tsc -b"
+  },
   "dependencies": {
     "@floating-ui/react": "^0.27.13",
     "@headlessui/react": "^2.2.6",
