--- a/packages/frappe-ui-react/tsconfig.json
+++ b/packages/frappe-ui-react/tsconfig.json
@@ -14,5 +14,11 @@
     "outDir": "dist"
   },
   "include": ["src"],
-  "exclude": ["node_modules", "dist"]
+  "exclude": [
+    "**/node_modules",
+    "dist",
+    "**/*.test.ts",
+    "**/*.stories.tsx",
+    "**/tests/*.(tsx|ts)"
+  ]
 }
