--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "lint:types": "tsc ",
     "lint:js:fix": "eslint --fix .",
     "publish:locally": "npm run publish:locally -w @rtcamp/frappe-ui-react",
-    "publish:remote": "npm run publish:remote -w @rtcamp/frappe-ui-react"
+    "publish:remote": "npm run publish:remote -w @rtcamp/frappe-ui-react",
+    "local-registry:start": "bash ./bin/setup-local-registry.sh",
+    "local-registry:stop": "bash ./bin/stop-local-registry.sh"
   },
   "devDependencies": {
     "@babel/plugin-transform-react-jsx": "^7.22.5",
