--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -35,6 +35,7 @@ jobs:
           cache: npm
       - name: Install dependencies
         run: |
+          git branch
           ls 
           pwd 
           rm -rf **/node_modules
