--- a/packages/frappe-ui-react/package.json
+++ b/packages/frappe-ui-react/package.json
@@ -50,7 +50,8 @@
     "react-grid-layout": "^1.5.2",
     "react-quill-new": "^3.6.0",
     "styled-components": "^6.1.19",
-    "tailwindcss": "^4.1.11"
+    "tailwindcss": "^4.1.11",
+    "tailwind-merge": "^2.4.0"
   },
   "devDependencies": {
     "@types/feather-icons": "^4.29.4",
