Remove status badges from README and update package.json to export theme.css

--- a/packages/frappe-ui-react/package.json
+++ b/packages/frappe-ui-react/package.json
@@ -18,7 +18,8 @@
       "import": "./dist/index.js",
       "require": "./dist/index.js",
       "types": "./dist-types/index.d.ts"
-    }
+    },
+    "./theme.css": "./src/theme.css"
   },
   "scripts": {
     "build": "tsc -b",
