--- a/packages/frappe-ui-react/package.json
+++ b/packages/frappe-ui-react/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.2",
   "main": "dist/index.js",
   "module": "dist/index.js",
+  "moduleResolution": "bundler",
   "types": "dist-types/index.d.ts",
   "description": "Package for Frappe UI Components created in react.",
   "author": {
@@ -62,7 +63,7 @@
     "quill-paste-smart": "^2.0.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-grid-layout": "^1.5.2",
+    "react-grid-layout": "^2.2.2",
     "react-quill-new": "^3.6.0",
     "react-resizable": "^3.0.5",
     "styled-components": "^6.1.19",
