--- a/packages/frappe-ui-react/package.json
+++ b/packages/frappe-ui-react/package.json
@@ -69,6 +69,10 @@
   "devDependencies": {
     "@types/feather-icons": "^4.29.4",
     "@types/node": "^24.1.0",
-    "@types/react-grid-layout": "^1.3.5"
+    "@types/react-grid-layout": "^1.3.5",
+    "sass-embedded": "^1.97.2"
+  },
+  "peerDependencies": {
+    "sass-embedded": "^1.97.2"
   }
 }
