--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@vitest/coverage-v8": "^3.2.4",
     "babel-jest": "^30.1.2",
     "babel-plugin-styled-components": "^2.1.4",
+    "baseline-browser-mapping": "^2.9.14",
     "eslint": "^9.30.1",
     "eslint-plugin-jest": "^29.0.1",
     "eslint-plugin-react-hooks": "^7.0.1",
