refactor: format first
Signed-off-by: ayushnirwal <53055971+ayushnirwal@users.noreply.github.com>

--- a/package.json
+++ b/package.json
@@ -75,8 +75,8 @@
   },
   "lint-staged": {
     "*.(cjs|js|ts|tsx)": [
-      "eslint --fix",
-      "prettier --write"
+      "prettier --write",
+      "eslint --fix"
     ],
     "*.json": [
       "prettier --write"
