--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^16.3.0",
     "@types/jest": "^30.0.0",
+    "@types/node": "^24.1.0",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^4.6.0",
