fix: remove tsconfig.json from publish
Signed-off-by: ayushnirwal <53055971+ayushnirwal@users.noreply.github.com>

--- a/packages/frappe-ui-react/package.json
+++ b/packages/frappe-ui-react/package.json
@@ -17,8 +17,7 @@
     "dist/",
     "dist-types/",
     "package.json",
-    "README.md",
-    "tsconfig.json"
+    "README.md"
   ],
   "license": "MIT",
   "private": false,
