--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@storybook/addon-themes": "^9.1.10",
     "@storybook/addon-vitest": "^9.1.17",
     "@storybook/react-vite": "^9.1.3",
+    "@storybook/test": "^8.6.15",
     "@tailwindcss/vite": "^4.1.11",
     "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^16.3.0",
