fix: remove addons from storybook production buil
Signed-off-by: ayushnirwal <53055971+ayushnirwal@users.noreply.github.com>

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -39,7 +39,7 @@ jobs:
           pnpm install || true
 
       - name: Build Storybook
-        run: pnpm build-storybook
+        run: pnpm build-storybook --test
 
       - name: Setup Pages
         uses: actions/configure-pages@v5
